[gd_scene load_steps=6 format=3 uid="uid://dxg57iry0rwpn"]

[ext_resource type="PackedScene" uid="uid://o006o6vprn6c" path="res://levels/parkour/ParkourBridge.tscn" id="1_606x2"]
[ext_resource type="Script" uid="uid://c7yypgho8hypy" path="res://levels/maze2/Set/last_bridge.gd" id="1_xj7tt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_606x2"]
size = Vector3(5.5740967, 1, 6.115967)

[sub_resource type="BoxShape3D" id="BoxShape3D_xj7tt"]
size = Vector3(170.15674, 1, 125.32765)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xj7tt"]
radius = 5.080078

[node name="LastBridge" type="Node3D"]
script = ExtResource("1_xj7tt")

[node name="Runway" parent="." instance=ExtResource("1_606x2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.860016, -165.42914)

[node name="ParkourStart" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkourStart"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5475464, -15.62045, -174.75633)
shape = SubResource("BoxShape3D_606x2")

[node name="ParkourHell" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkourHell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.220749, -46.41834, -205.51776)
shape = SubResource("BoxShape3D_xj7tt")

[node name="OceanStart" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="OceanStart"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48150873, -21.232792, -240.112)
shape = SubResource("CylinderShape3D_xj7tt")

[node name="OceanEnd" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="OceanEnd"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -76.2448, -351.84128)
shape = SubResource("CylinderShape3D_xj7tt")

[connection signal="body_entered" from="ParkourStart" to="." method="_on_parkour_start_body_entered"]
[connection signal="body_entered" from="ParkourHell" to="." method="_on_parkour_hell_body_entered"]
[connection signal="body_entered" from="OceanStart" to="." method="_on_ocean_start_body_entered"]
[connection signal="body_exited" from="OceanEnd" to="." method="_on_ocean_end_body_exited"]
